# kinematics

./: CMakeLists.txt
include/kinematics/: kinematics.h  version.h
src/: CMakeLists.txt  kinematics.cpp  version.cpp
tests/: CMakeLists.txt  test_kinematics.cpp
